<resources>
    <string name="app_name">Connect Me</string>

    <string name="connect_me">Connect Me</string>
    <string name="start">Start</string>
    <string name="complete">Complete</string>
    <string name="best">Best</string>
    <string name="level_select">Level Select</string>
    <string name="level_number">Level %d</string>

    <string name="target_number">Target\n%1$d</string>
    <string name="moves_number">Moves\n%1$d</string>
    <string name="best_number">Best\n%1$s</string>
    <string name="blank">-</string>
    <string name="target_number_2">Target: %1$d</string>
    <string name="sizexsize">%1$dx%2$d</string>
    <string name="grid_size">Grid size:</string>
    <string name="target">Target:</string>
    <string name="completed">Completed:</string>
    <string name="all">All</string>
    <string name="finished">Finished</string>
    <string name="unfinished">Unfinished</string>
    <string name="not_best">Not Best</string>
</resources>
