<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/gridSizeTextView"/>

    <TextView
        android:id="@+id/headerTextView"
        style="@style/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_select"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/gridSizeTextView"
        style="@style/itemTextView"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/viewPadding"
        android:text="@string/grid_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTextView"/>

    <TextView
        android:id="@+id/targetTextView"
        style="@style/itemTextView"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/viewPadding"
        android:text="@string/target"
        app:layout_constraintBottom_toBottomOf="@id/gridSizeTextView"
        app:layout_constraintLeft_toRightOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/gridSizeTextView"/>

    <Spinner
        android:id="@+id/gridSizeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/viewPadding"
        app:layout_constraintBottom_toBottomOf="@id/gridSizeTextView"
        app:layout_constraintLeft_toRightOf="@id/gridSizeTextView"
        app:layout_constraintTop_toTopOf="@id/gridSizeTextView"/>

    <Spinner
        android:id="@+id/targetSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/viewPadding"
        app:layout_constraintLeft_toRightOf="@id/targetTextView"
        app:layout_constraintTop_toTopOf="@id/gridSizeSpinner"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/levelRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gridSizeTextView"/>

</android.support.constraint.ConstraintLayout>