<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/targetTextView"/>

    <TextView
        android:id="@+id/headerTextView"
        style="@style/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Level 1"/>

    <ImageView
        android:id="@+id/nextLevelButton"
        android:layout_width="@dimen/headerHeight"
        android:layout_height="@dimen/headerHeight"
        android:layout_marginRight="@dimen/viewPadding"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:src="@drawable/next_arrow"
        app:layout_constraintRight_toRightOf="@id/headerTextView"
        app:layout_constraintTop_toTopOf="@id/headerTextView"/>

    <ImageView
        android:id="@+id/refreshButton"
        android:layout_width="@dimen/headerHeight"
        android:layout_height="@dimen/headerHeight"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:src="@drawable/refresh"
        app:layout_constraintRight_toLeftOf="@id/nextLevelButton"
        app:layout_constraintTop_toTopOf="@id/headerTextView"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67"/>

    <TextView
        android:id="@+id/targetTextView"
        style="@style/itemTextView"
        android:layout_marginLeft="20dp"
        android:text="@string/target_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/headerTextView"
        tools:backgroundTint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/bestTextView"
        style="@style/itemTextView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/best_number"
        app:layout_constraintLeft_toRightOf="@id/guideline1"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/targetTextView"
        tools:backgroundTint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/movesTextView"
        style="@style/itemTextView"
        android:layout_marginRight="20dp"
        android:text="@string/moves_number"
        app:layout_constraintLeft_toRightOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/targetTextView"
        tools:backgroundTint="@color/colorPrimary"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/headerTextView"/>

    <distraction.com.connectme.views.Grid
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect"
        app:layout_constraintBottom_toTopOf="@id/bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/targetTextView"
        tools:layout_height="300dp"
        tools:layout_width="300dp"/>

    <View
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid"/>

    <ImageView
        android:id="@+id/starImage1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/star"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/bar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/starImage2"
        app:layout_constraintTop_toTopOf="@id/bar"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/starImage2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/star"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/bar"
        app:layout_constraintLeft_toRightOf="@id/starImage1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bar"
        tools:visibility="visible"/>

</android.support.constraint.ConstraintLayout>